--- a/yaml/discovery/discovery.yaml
+++ b/yaml/discovery/discovery.yaml
@@ -2,3 +2,6 @@ eureka:
   client:
     register-with-eureka: false
     fetch-registry: false
+
+  instance:
+    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
