--- a/yaml/gateway/gateway.yaml
+++ b/yaml/gateway/gateway.yaml
@@ -4,3 +4,5 @@ eureka:
     fetch-registry: true
     service-url:
       defaultZone: http://j9e101.p.ssafy.io:8761/eureka
+  instance:
+    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
