--- a/yaml/auth/auth.yaml
+++ b/yaml/auth/auth.yaml
@@ -3,7 +3,7 @@ eureka:
     register-with-eureka: true
     fetch-registry: true
     service-url:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://j9e101.p.ssafy.io:8761/eureka
 
   instance:
     instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
